--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "nodemon": "^3.1.0"
   },
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
+   
   },
   "name": "role-based-auth",
   "version": "1.0.0",
