--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "negotiator": "^0.6.3",
     "node-addon-api": "^5.1.0",
     "node-fetch": "^2.7.0",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "nopt": "^5.0.0",
     "normalize-path": "^3.0.0",
@@ -147,8 +148,8 @@
     "simple-update-notifier": "^2.0.0",
     "sparse-bitfield": "^3.0.3",
     "statuses": "^2.0.1",
-    "string-width": "^4.2.3",
     "string_decoder": "^1.3.0",
+    "string-width": "^4.2.3",
     "strip-ansi": "^6.0.1",
     "supports-color": "^5.5.0",
     "tar": "^6.2.0",
@@ -156,6 +157,7 @@
     "toidentifier": "^1.0.1",
     "touch": "^3.1.0",
     "tr46": "^4.1.1",
+    "twilio": "^5.0.4",
     "type-is": "^1.6.18",
     "undefsafe": "^2.0.5",
     "unpipe": "^1.0.0",
@@ -168,11 +170,10 @@
     "wrappy": "^1.0.2",
     "yallist": "^4.0.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev":"nodemon server.js"
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC"
