--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,19 @@
 {
-    "version":2,
-    "builds":[
+    "version": 2,
+    "builds": [
         {
-            "src":"server.js",
-            "use":"@vercel/node"
-            }
-        ],
-    "routes":[
-        {
-            "src":"/(.*)",
-            "dest":"server.js"
+            "src": "server.js",
+            "use": "@vercel/node"
         }
-        ]
+    ],
+    "routes": [
+        {
+            "src": "/swagger-ui/(.*)",
+            "dest": "/swagger-ui/$1"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "server.js"
+        }
+    ]
 }
